# Image-Enhancer-Python

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/agents/: architecture-reviewer.agent.md  python-implementer.agent.md  test-writer.agent.md
.github/codeql/: codeql-config.yml
.github/hooks/: ai-governance-hooks.json
.github/instructions/: adapters.instructions.md  adr.instructions.md  application.instructions.md  architecture-fitness.instructions.md  bootstrap.instructions.md  cli.instructions.md  data-contracts.instructions.md  domain.instructions.md  exceptions.instructions.md  investigation.instructions.md  logging.instructions.md  mapping.instructions.md  module-boundaries.instructions.md  naming.instructions.md  operational-readiness.instructions.md  performance.instructions.md  phases.instructions.md  planningPersistence.instructions.md  python.instructions.md  review-checklist.instructions.md  security.instructions.md  static-analysis.instructions.md  tests.instructions.md  ui.instructions.md  work-scope.instructions.md
.github/skills/: README.md  advanced_ai_skills_specification_pack.md
.github/workflows/: ci.yml  codeql.yml
docs/adr/: 0001-layered-architecture-and-boundaries.md  0002-ui-runtime-and-api-strategy.md  0003-project-persistence-and-plugin-contracts.md  0004-ai-integration-and-async-execution.md  0005-project-file-schema-versioning.md
scripts/: audit-skills.py  link-skills-to-codex.ps1  sync-copilot-hooks.ps1
tests/: __init__.py  test_package_import.py
workflow/: CLI.decision-log.md
(+168 files in other folders)
