[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "image-workbench"
version = "0.1.0"
description = "Local image enhancement workbench with layered Python architecture."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.4",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["image_workbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-config",
    "--strict-markers",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = [
    ".github/skills",
    "scripts",
    "target",
    "tools",
]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "RUF",
    "UP",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["image_workbench"]
strict = true
warn_unreachable = true
pretty = true
